--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     // h2
     runtimeOnly 'com.h2database:h2'
 
+    // MySQL
+    runtimeOnly 'com.mysql:mysql-connector-j'
+
     // RestDocs
     asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
