--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,6 +2,13 @@ spring:
   profiles:
     default: local
 
+---
+
+spring:
+  config:
+    activate:
+      on-profile: local
+
   datasource:
     url: jdbc:h2:mem:~/gcCafe
     driver-class-name: org.h2.Driver
@@ -10,35 +17,28 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: none
-
-  h2:
-    console:
-      enabled: true
-
----
-
-spring:
-  config:
-    activate:
-      on-profile: local
-
-
-  jpa:
-    hibernate:
-      ddl-auto: update
+      ddl-auto: create
 
     show-sql: true
     properties:
       hibernate:
         format_sql: true
 
+  h2:
+    console:
+      enabled: true
 ---
 
 spring:
   config:
     activate:
       on-profile: test
+
+  datasource:
+    url: jdbc:h2:mem:~/gcCafe
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
 
   jpa:
     hibernate:
@@ -47,3 +47,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+  h2:
+    console:
+      enabled: true
