--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.springframework.boot' version '3.3.3'
     id 'io.spring.dependency-management' version '1.1.6'
     id "org.asciidoctor.jvm.convert" version "3.3.2"
+    id "com.epages.restdocs-api-spec" version "0.18.2"
 }
 
 group = 'gc'
@@ -48,6 +49,8 @@ dependencies {
     // RestDocs
     asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+    testImplementation 'com.epages:restdocs-api-spec-mockmvc:0.18.2'
+
 
     // Querydsl-JPA
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
@@ -59,6 +62,14 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+    finalizedBy('copyOasToSwagger')
+}
+
+tasks.register('copyOasToSwagger', Copy) {
+    delete 'src/main/resources/static/swagger-ui/openapi3.yaml' // 기존 OAS 파일 삭제
+    from "$buildDir/api-spec/openapi3.yaml" // 복제할 OAS 파일 지정
+    into 'src/main/resources/static/swagger-ui/.' // 타겟 디렉터리로 파일 복제
+    dependsOn 'openapi3' // openapi3 Task가 먼저 실행되도록 설정
 }
 
 ext { // 전역 변수
@@ -78,6 +89,20 @@ asciidoctor {
     }
     baseDirFollowsSourceFile() // 다른 adoc 파일을 include 할 때 경로를 baseDir로 맞춘다.
     dependsOn test
+}
+
+openapi3 {
+    server = 'https://localhost:8080'
+    title = 'My API'
+    description = 'My API description'
+    version = '0.1.0'
+    format = 'yaml'
+}
+
+postman {
+    title = 'My API'
+    version = '0.1.0'
+    baseUrl = 'https://localhost:8080'
 }
 
 bootJar {
