feat: 슬랙 메시지 전송 구현

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,6 +2,10 @@ spring:
   profiles:
     default: local
 
+slack:
+  webhook:
+    url: ${WEBHOOK_URL}
+
 ---
 
 spring:
@@ -27,6 +31,10 @@ spring:
   h2:
     console:
       enabled: true
+
+  elasticsearch:
+    uris: http://localhost:9200
+
 ---
 
 spring:
