--- a/.github/workflows/assign-reviewers.yml
+++ b/.github/workflows/assign-reviewers.yml
@@ -34,4 +34,5 @@ jobs:
           GITHUB_REPOSITORY: ${{ github.repository }}
           PR_NUMBER: ${{ github.event.pull_request.number }}
           PR_CREATOR: ${{ github.event.pull_request.user.login }}
+          SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
         run: ./gradlew run
