chore: 테스트 할 팀원 추가

--- a/script/src/main/resources/reviewers.yml
+++ b/script/src/main/resources/reviewers.yml
@@ -1,3 +1,7 @@
 reviewers:
   - githubName: NaMinhyeok
     slackId: U087GK7PCKZ
+  - githubName: ehs208
+    slackId: U088D058K6G
+  - githubName: jwnnoh
+    slackId: U0883RML2H4
